--- a/css/style.css
+++ b/css/style.css
@@ -91,6 +91,48 @@ p {
     color:#5FA47B;
 }
 
+.footer-link-green{
+    font-size: 24px;
+    font-family: gopher, sans-serif;
+    font-weight: normal;
+    color:#000000;
+    padding-bottom: 2px;
+    transition-duration: .1s;
+}
+
+.footer-link-green:hover {
+    color:#5FA47B;
+    cursor:pointer;
+}
+
+.footer-link-orange {
+    font-size: 24px;
+    font-family: gopher, sans-serif;
+    font-weight: normal;
+    color:#000000;
+    padding-bottom: 2px;
+    transition-duration: .1s;
+}
+
+.footer-link-orange:hover {
+    color:#C2663D;
+    cursor:pointer;
+}
+
+.footer-link-blue{
+    font-size: 24px;
+    font-family: gopher, sans-serif;
+    font-weight: normal;
+    color:#000000;
+    padding-bottom: 2px;
+    transition-duration: .1s;
+}
+
+.footer-link-blue:hover {
+    color:#353D87;
+    cursor:pointer;
+}
+
 .abt {
     background-color: #5FA47B;
     margin: 2%;
@@ -114,7 +156,7 @@ p {
     box-shadow:10px 10px #000000;
     margin-bottom: 3%;
     margin-top: 3%;
-    margin-left: 2%;
+    margin-left: 5%;
     margin-right: 4%;
     padding-right: 2%;
     padding-left: 2%;
@@ -129,14 +171,14 @@ p {
 .grid-container {
     display: grid;
     grid-template-columns: 30% 40% 30%;
-    margin-left: 4%;
+    margin-left: 14%;
     padding-left: 2%;
 }
 
 .grid-container-img {
     display: grid;
     grid-template-columns: 30% 30% 30%;
-    margin-left: 4%;
+    margin-left: 14%;
     margin-bottom: 2%;
     padding-bottom: 2%;
     padding-left: 2%;
@@ -218,9 +260,7 @@ p {
 }
 
 .paragraph {
-    padding-left: 4%;
-    padding-bottom: 2%;
-    padding-top: 2%;
+    margin-left: 10%;
 }
 
 
